Fix image little jump [touch: 35]

--- a/src/static/src/scss/website/components/_section.scss
+++ b/src/static/src/scss/website/components/_section.scss
@@ -45,7 +45,8 @@
     }
 
     &--hidden {
-      display: none;
+      opacity: 0;
+      transition: none;
     }
 
     &--faded-out {
